[workspace]
members = ["bagua-engine", "bagua-helpers", "bagua-types"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["<husky-wealths> <husky@wealths.app"]
description = "八卦量化库"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/BaguaQuantify/bagua"

[profile.release]
codegen-units = 1
debug = false
lto = true
strip = true
opt-level = "z"
panic = 'abort'
overflow-checks = false
debug-assertions = false
incremental = false

[workspace.dependencies]
bagua-types = { path = "./bagua-types" }
bagua-helpers = { path = "./bagua-helpers" }
bagua-engine = { path = "./bagua-engine" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
tracing = { version = "0" }
tracing-subscriber = { version = "0", features = ["local-time", "json"] }
chrono = { version = "0" }
time = { version = "0", features = ["macros", "formatting"] }
once_cell = { version = "1" }
rayon = { version = "1" }
futures = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
snowflaked = { version = "1", features = ["sync"] }
async-trait = { version = "0" }
parking_lot = { version = "0" }
ringbuffer = { version = "0" }
