[package]
name = "bagua-engine"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bagua-helpers = { path = "../bagua-helpers" }
bagua-types = { path = "../bagua-types" }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
