[package]
name = "bagua-exchange"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
bagua-helpers = { workspace = true }
bagua-types = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
