[package]
name = "bagua-helpers"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
homedir = { workspace = true }