[package]
name = "bagua-python-sdk"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "bagua"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
