[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "bagua-python-sdk"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "readme"]
dependencies = ["boto3==1.36.6"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "bagua.bagua"
