[package]
name = "bagua-types"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
ringbuffer = { workspace = true }
